явная_реализация_интерфейса

--- a/Sprint4/Task1.ipynb
+++ b/Sprint4/Task1.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -197,8 +197,47 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is driving!\n",
+      "Engine started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public interface IDrive\n",
+    "{\n",
+    "    void Drive();\n",
+    "}\n",
+    "\n",
+    "public class Car : IDrive\n",
+    "{\n",
+    "    void IDrive.Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"The car is driving!\");\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Engine started.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "// Приведение к интерфейсу IDrive\n",
+    "IDrive driver = myCar;\n",
+    "driver.Drive();  // Работает, так как Drive() - метод интерфейса\n",
+    "\n",
+    "// Невозможно вызвать StartEngine через ссылку на интерфейс\n",
+    "myCar.StartEngine(); // Ошибка компиляции! Нет такого метода в IDrive\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -222,8 +261,134 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот умылся и потянулся. Ему можно дать задание.\n",
+      "Текущие параметры рост: 30, вес: 5.\n",
+      "Кот охотится на мышь.\n",
+      "\n",
+      "Собака готова действовать.\n",
+      "Текущие параметры рост: 40, вес: 15.\n",
+      "Собака набегалась и потратила 30 единиц энергии. Осталось еще 70.\n",
+      "\n",
+      "Собака готова действовать.\n",
+      "Текущие параметры рост: 45, вес: 20.\n",
+      "Собака набегалась и потратила 40 единиц энергии. Осталось еще 60.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void WakeUp();\n",
+    "    void FallAsleep();\n",
+    "    int GetCurrntEnergy();\n",
+    "}\n",
+    "\n",
+    "public interface IDog : IAnimal\n",
+    "{\n",
+    "    void Play(int amount);\n",
+    "}\n",
+    "\n",
+    "public interface ICat : IAnimal\n",
+    "{\n",
+    "    void Hunt(string aim); \n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public int Weight { get; set; }\n",
+    "    public int Height { get; set; }\n",
+    "    protected int currentEnergy;\n",
+    "\n",
+    "    public virtual void WakeUp()\n",
+    "    {\n",
+    "        currentEnergy = 100;\n",
+    "        Console.WriteLine($\"Текущие параметры рост: {Height}, вес: {Weight}.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void FallAsleep()\n",
+    "    {\n",
+    "        currentEnergy = 100;\n",
+    "        Console.WriteLine($\"Текущие параметры рост: {Height}, вес: {Weight}.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrntEnergy()\n",
+    "    {\n",
+    "        return currentEnergy;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IDog\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public override void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака готова действовать.\");\n",
+    "        base.WakeUp();\n",
+    "    }\n",
+    "\n",
+    "    public override void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака недоступна для взаимодействия.\");\n",
+    "        base.FallAsleep();\n",
+    "    }\n",
+    "\n",
+    "    void IDog.Play(int amount) // явная реализация интерфейса\n",
+    "    {\n",
+    "        currentEnergy -= amount;\n",
+    "        Console.WriteLine($\"Собака набегалась и потратила {amount} единиц энергии. Осталось еще {currentEnergy}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal, ICat\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "\n",
+    "    public override void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот умылся и потянулся. Ему можно дать задание.\");\n",
+    "        base.WakeUp();\n",
+    "    }\n",
+    "\n",
+    "    public override void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот отрубился спать. Больше его нельзя трогать.\");\n",
+    "        base.FallAsleep();\n",
+    "    }\n",
+    "\n",
+    "    void ICat.Hunt(string aim) // явная реализация интерфейса\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот охотится на {aim}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat {Weight=5, Height=30};\n",
+    "myCat.WakeUp();\n",
+    "// myCat.Hunt(\"мышь\"); // Такой вызов функции будет вывзывать ошибку компиляции\n",
+    "ICat cat = myCat;  //Когда класс реализует интерфейс, экземпляры этого класса\n",
+    "                    //могут быть приведены к типу интерфейса, если требуется доступ к его членам.\n",
+    "cat.Hunt(\"мышь\");\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Dog myDog = new Dog {Weight=15, Height=40};\n",
+    "myDog.WakeUp();\n",
+    "// myDog.Play(40); // Такой вызов функции будет вывзывать ошибку компиляции\n",
+    "IDog dog = myDog; //Когда класс реализует интерфейс, экземпляры этого класса\n",
+    "                   //могут быть приведены к типу интерфейса, если требуется доступ к его членам.\n",
+    "dog.Play(30); \n",
+    "Console.WriteLine(); \n",
+    "\n",
+    "IDog doge = new Dog {Weight=20, Height=45}; // Экземпляр класса можно создать и сразу с указанием\n",
+    "                                            // типа интерфейса\n",
+    "doge.WakeUp(); // Экземпляр будет исполнять как функции класса Dog\n",
+    "doge.Play(40); // Так и функции доступные только для интерфейса, например, Play()."
+   ]
   }
  ],
  "metadata": {
@@ -231,6 +396,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
