--- a/Sprint4/Task2.ipynb
+++ b/Sprint4/Task2.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -159,8 +159,90 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Машина запущена.\n",
+      "У этого транспортного средства 4 колеса.\n",
+      "Машина остановлена.\n",
+      "Мотоцикл запущен.\n",
+      "У этого транспортного средства 2 колеса.\n",
+      "Мотоцикл остановлен.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();            // Метод для запуска транспортного средства\n",
+    "    void Stop();             // Метод для остановки транспортного средства\n",
+    "    int GetNumberOfWheels(); // Метод для получения количества колес\n",
+    "}\n",
+    "\n",
+    "public class Car : IVehicle\n",
+    "{\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина запущена.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина остановлена.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 4; // У машины 4 колеса\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : IVehicle\n",
+    "{\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 2; // У мотоцикла 2 колеса\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class VehicleService\n",
+    "{\n",
+    "    private readonly IVehicle _vehicle;\n",
+    "\n",
+    "    // Внедрение зависимости через конструктор\n",
+    "    public VehicleService(IVehicle vehicle)\n",
+    "    {\n",
+    "        _vehicle = vehicle; \n",
+    "    }\n",
+    "\n",
+    "    public void UseVehicle()\n",
+    "    {\n",
+    "        _vehicle.Start(); // Запускаем транспортное средство\n",
+    "        Console.WriteLine($\"У этого транспортного средства {_vehicle.GetNumberOfWheels()} колеса.\");\n",
+    "        _vehicle.Stop(); // Останавливаем транспортное средство\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IVehicle myCar = new Car(); // Создаем объект машины\n",
+    "VehicleService carService = new VehicleService(myCar); // Передаем машину в сервис\n",
+    "carService.UseVehicle(); // Используем сервис с машиной\n",
+    "\n",
+    "IVehicle myMotorcycle = new Motorcycle(); // Создаем объект мотоцикла\n",
+    "VehicleService motorcycleService = new VehicleService(myMotorcycle); // Передаем мотоцикл в сервис\n",
+    "motorcycleService.UseVehicle(); // Используем сервис с мотоциклом"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -184,8 +266,118 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот умылся и потянулся. Ему можно дать задание.\n",
+      "Хозяин достал игрушку.\n",
+      "Кот играет с веревочкой...\n",
+      "Хозяин укладывает питомца спать.\n",
+      "Кот отрубился спать. Больше его нельзя трогать.\n",
+      "\n",
+      "Хозяин будит питомца.\n",
+      "Собака проснулась и готова действовать.\n",
+      "Собака бегает за палкой...\n",
+      "Хозяин укладывает питомца спать.\n",
+      "Собака уснула и больше недоступна для взаимодействия.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void WakeUp();\n",
+    "    void FallAsleep();\n",
+    "    void Play();\n",
+    "}\n",
+    "\n",
+    "public class Dog : IAnimal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака проснулась и готова действовать.\");\n",
+    "    }\n",
+    "\n",
+    "    public void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака уснула и больше недоступна для взаимодействия.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Play() // явная реализация интерфейса\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака бегает за палкой...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : IAnimal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот умылся и потянулся. Ему можно дать задание.\");\n",
+    "    }\n",
+    "\n",
+    "    public void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот отрубился спать. Больше его нельзя трогать.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Play()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот играет с веревочкой...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Master\n",
+    "{\n",
+    "    private readonly IAnimal _animal;\n",
+    "\n",
+    "    public Master(IAnimal animal)\n",
+    "    {\n",
+    "        _animal = animal;\n",
+    "    }\n",
+    "\n",
+    "    public void PetWakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Хозяин будит питомца.\");\n",
+    "        _animal.WakeUp();\n",
+    "    }\n",
+    "\n",
+    "    public void PlayWithPet()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Хозяин достал игрушку.\");\n",
+    "        _animal.Play();\n",
+    "    }\n",
+    "\n",
+    "    public void PetFallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Хозяин укладывает питомца спать.\");\n",
+    "        _animal.FallAsleep();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal dog = new Dog {Breed=\"staff\"};\n",
+    "Master dogsMaster = new Master(dog);\n",
+    "\n",
+    "IAnimal cat = new Cat {Color=\"white\"};\n",
+    "Master catsMaster = new Master(cat);\n",
+    "\n",
+    "\n",
+    "\n",
+    "cat.WakeUp(); // Кот просыпается сам\n",
+    "catsMaster.PlayWithPet(); // Хозяин инициирует игру с котом\n",
+    "catsMaster.PetFallAsleep(); // Хозяин укладывает кота спать\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "dogsMaster.PetWakeUp(); // Хозяин будит питомца\n",
+    "dog.Play(); // Собака сама играет\n",
+    "dogsMaster.PetFallAsleep(); // Хозяин укладывает собаку спать"
+   ]
   }
  ],
  "metadata": {
@@ -193,6 +385,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
