удалил_лишние_комментарии

--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "public class Customer // В класс Customer добавлено свойство фон, которое наследуется всем подклассам.\n",
+    "public class Customer \n",
     "{\n",
     "    public int CustomerId { get; set; }\n",
     "    public string Name { get; set; }\n",
@@ -80,7 +80,7 @@
     "    public string Phone { get; set; } \n",
     "\n",
     "\n",
-    "    public Customer (int customerId, string name, string email, string phone) // Конструктор\n",
+    "    public Customer (int customerId, string name, string email, string phone) \n",
     "    {\n",
     "        CustomerId = customerId;\n",
     "        Name = name;\n",
@@ -94,12 +94,12 @@
     "        Console.WriteLine($\"{Name} приветствует {myCustomer.Name}!\");\n",
     "    }\n",
     "\n",
-    "    public virtual void GetFullName() // Методы класса\n",
+    "    public virtual void GetFullName() \n",
     "    {\n",
     "        Console.WriteLine(Name);\n",
     "    }\n",
     "\n",
-    "    public virtual void UpdateEmail(string newEmail) // Возможно благодаря полиморфизму\n",
+    "    public virtual void UpdateEmail(string newEmail) \n",
     "    {\n",
     "        Email = newEmail;\n",
     "    }\n",
@@ -110,13 +110,13 @@
     "    }\n",
     "}\n",
     "\n",
-    "public interface IVipCustomer // Интерфейс для задания необходимым свойств и методов для подкласса VipCustomer\n",
+    "public interface IVipCustomer\n",
     "{\n",
-    "    int LoyaltyPoint { get; set; } // Свойство без реализации\n",
-    "    void ViewLoyaltyPoint();         // Метод без реализации\n",
+    "    int LoyaltyPoint { get; set; } \n",
+    "    void ViewLoyaltyPoint();         \n",
     "}\n",
     "\n",
-    "public class VipCustomer : Customer, IVipCustomer // Множественное наследование\n",
+    "public class VipCustomer : Customer, IVipCustomer \n",
     "{\n",
     "    public int LoyaltyPoint { get; set; }\n",
     "\n",
@@ -126,9 +126,7 @@
     "        LoyaltyPoint = loyaltyPoint;\n",
     "    }\n",
     "\n",
-    "    public override void ViewProfile() // РЕАЛИЗАЦИЯ ПОЛИМОРФИЗМА (В ЧАСТНОСТИ ПЕРЕКРЫТИЯ/ПЕРЕОПРЕДЕЛЕНИЯ):\n",
-    "                                       // КЛАСС ViewProfile задан в классе Customer,\n",
-    "                                       // а здесь он переопределяется с помощью override\n",
+    "    public override void ViewProfile()\n",
     "    {\n",
     "        base.ViewProfile();\n",
     "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
@@ -204,14 +202,14 @@
     "    }\n",
     "}\n",
     "\n",
-    "public interface IPartnerCompanyCustomer // Интерфейс для задания необходимым свойств и методов для подкласса PartnerCompanyCustomer\n",
+    "public interface IPartnerCompanyCustomer \n",
     "{\n",
     "    int Discount { get; set; }\n",
     "    void CheckDiscount();\n",
     "    void IPO(int issue);\n",
     "}\n",
     "\n",
-    "public class PartnerCompanyCustomer : GroupCustomer, IPartnerCompanyCustomer // Множественное наследование\n",
+    "public class PartnerCompanyCustomer : GroupCustomer, IPartnerCompanyCustomer\n",
     "{\n",
     "    public int Discount { get; set; }\n",
     "\n",
@@ -226,13 +224,13 @@
     "        Console.WriteLine($\"Скидка компании: {Discount}\");\n",
     "    }\n",
     "\n",
-    "    public void IPO(int issue)\n",
+    "    public void IPO(int issue) // Метод от интерфейса IPartnerCompanyCustomer\n",
     "    {\n",
-    "        Console.WriteLine($\"Эмиссия акций составляет {issue} шт.\");\n",
+    "        Console.WriteLine($\"Эмиссия акций составляет {issue} шт.\"); \n",
     "\n",
     "    }\n",
     "    \n",
-    "    public override void IPO(bool is_public_company)\n",
+    "    public override void IPO(bool is_public_company) // Метод от класса GroupCustomer\n",
     "    {\n",
     "        if (is_public_company)\n",
     "        {\n",
