--- a/Sprint4/Task3.ipynb
+++ b/Sprint4/Task3.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:DodgerBlue\">Индивидальный проект</h1>"
+    "<h1 style=\"color:DodgerBlue\">Индивидуальный проект</h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:DodgerBlue\">Название проекта:</h2>\n",
+    "<h2 style=\"color:DodgerBlue\">Название проекта: класс Customer в C#</h2>\n",
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 11\n"
    ]
   },
   {
@@ -26,7 +26,12 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Создать базовый класс Customer в C#, который будет представлять информацию о\n",
+    "клиентах или покупателях. На основе этого класса разработать 2-3 производных\n",
+    "класса, демонстрирующих принципы наследования и полиморфизма. В каждом из\n",
+    "классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) создайте явную реализации интерфейса и управление зависимостями \n"
@@ -43,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -52,8 +57,229 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID клиента: 2; имя: Oleg; электронная почта: tnk@gmail.com\n",
+      "баланс лояльности: 25\n",
+      "Компанией BlackRockInvestment владеет Oleg.\n",
+      "ID клиента: 2; имя: Oleg; электронная почта: tnk@gmail.com\n",
+      "баланс лояльности: 25\n",
+      "баланс лояльности: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Customer \n",
+    "{\n",
+    "    public int CustomerId { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public string Email { get; set; }\n",
+    "    public string Phone { get; set; } \n",
+    "\n",
+    "\n",
+    "    public Customer (int customerId, string name, string email, string phone)\n",
+    "    {\n",
+    "        CustomerId = customerId;\n",
+    "        Name = name;\n",
+    "        Email = email;\n",
+    "        Phone = phone;\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public void SayHello(Customer myCustomer)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} приветствует {myCustomer.Name}!\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetFullName() \n",
+    "    {\n",
+    "        Console.WriteLine(Name);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void UpdateEmail(string newEmail) \n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ViewProfile()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IVipCustomer \n",
+    "{\n",
+    "    int LoyaltyPoint { get; set; } \n",
+    "    void ViewLoyaltyPoint(); // для явной реализации интерфейса  \n",
+    "}\n",
+    "\n",
+    "public class VipCustomer : Customer, IVipCustomer \n",
+    "{\n",
+    "    public int LoyaltyPoint { get; set; }\n",
+    "\n",
+    "    public VipCustomer (int customerId, string name, string email, string phone, int loyaltyPoint) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        LoyaltyPoint = loyaltyPoint;\n",
+    "    }\n",
+    "\n",
+    "    public override void ViewProfile()\n",
+    "    {\n",
+    "        base.ViewProfile();\n",
+    "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
+    "    }\n",
+    "\n",
+    "    void IVipCustomer.ViewLoyaltyPoint() // Доступно только для объектов типа IVipCustomer\n",
+    "    {\n",
+    "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class RegularCustomer : Customer \n",
+    "{\n",
+    "    public string RegistrationDate { get; set; }\n",
+    "\n",
+    "    public RegularCustomer (int customerId, string name, string email, string phone, string registrationDate) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        RegistrationDate = registrationDate;\n",
+    "    }\n",
+    "\n",
+    "    public override void UpdateEmail(string newEmail)\n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "        RegistrationDate = DateTime.Today.ToString();\n",
+    "    }\n",
+    "\n",
+    "    public void MakeGift(RegularCustomer myCustomer)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} дарит подарок для {myCustomer.Name}!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class CompanyCustomer : Customer \n",
+    "{\n",
+    "    private readonly VipCustomer _owner; \n",
+    "    public string GroupName { get; set; }\n",
+    "    \n",
+    "    public CompanyCustomer (int customerId, string name, string email, string phone, string groupName, VipCustomer owner) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        GroupName = groupName;\n",
+    "        _owner = owner; // Создание зависимости через констурктор \n",
+    "    }\n",
+    "    \n",
+    "    public override void GetFullName()\n",
+    "    {\n",
+    "        Console.WriteLine(GroupName);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void IPO(bool is_public_company)\n",
+    "    {\n",
+    "        if (is_public_company)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Данная компания является публичной!\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Данная компания является частной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void CheckOwner() // Использование зависимости\n",
+    "    {\n",
+    "        if (_owner != null)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Компанией {GroupName} владеет {_owner.Name}.\"); \n",
+    "            _owner.ViewProfile();\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Владелец компании {GroupName} не определен.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IPartnerCompanyCustomer \n",
+    "{\n",
+    "    int Discount { get; set; }\n",
+    "    void CheckDiscount();\n",
+    "    void IPO(int issue);\n",
+    "}\n",
+    "\n",
+    "public class PartnerCompanyCustomer : CompanyCustomer, IPartnerCompanyCustomer \n",
+    "{\n",
+    "    public int Discount { get; set; }\n",
+    "\n",
+    "    public PartnerCompanyCustomer (int customerId, string name, string email, string phone, string groupName, VipCustomer owner, int discount) \n",
+    "    : base(customerId, name, email, phone, groupName, owner)\n",
+    "    {\n",
+    "        Discount = discount;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckDiscount()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Скидка компании: {Discount}\");\n",
+    "    }\n",
+    "\n",
+    "    public void IPO(int issue) // Метод от интерфейса IPartnerCompanyCustomer\n",
+    "    {\n",
+    "        Console.WriteLine($\"Эмиссия акций составляет {issue} шт.\");\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    public override void IPO(bool is_public_company) // Метод от класса GroupCustomer\n",
+    "    {\n",
+    "        if (is_public_company)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Акции {GroupName} уже котируются на бирже!\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} не выпускала акций!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class CustomerCollection<T> where T : Customer // Generic-класс\n",
+    "{\n",
+    "    private List<T> _customers = new List<T>();\n",
+    "\n",
+    "    public void Add(T customer)\n",
+    "    {\n",
+    "        _customers.Add(customer);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T customer)\n",
+    "    {\n",
+    "        _customers.Remove(customer);\n",
+    "    }\n",
+    "\n",
+    "    public void ViewProfile()\n",
+    "    {\n",
+    "        foreach (var customer in _customers)\n",
+    "        {\n",
+    "            customer.ViewProfile(); \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "CustomerCollection<Customer> customers = new CustomerCollection<Customer>();\n",
+    "\n",
+    "VipCustomer oleg = new VipCustomer(2, \"Oleg\", \"tnk@gmail.com\", \"89991234455\", 25);\n",
+    "PartnerCompanyCustomer blackRock = new PartnerCompanyCustomer(1, \"BlackRock\", \"blckrck@gmail.com\", \"89997773344\", \"BlackRockInvestment\", oleg, 20);\n",
+    "\n",
+    "oleg.ViewProfile(); // узнаем информацию через экземпляр класса VipCustomer\n",
+    "blackRock.CheckOwner(); // узнаем частично ту же информацию, но уже через экземпляр класса PartnerCompanyCustomer\n",
+    "\n",
+    "// oleg.ViewLoyaltyPoint(); // Выведет ошибку компиляции\n",
+    "IVipCustomer newoleg = oleg;\n",
+    "newoleg.ViewLoyaltyPoint(); // Вызов метода ViewLoyaltyPoint возможен только от экземпляра типа IVipCustomer"
+   ]
   }
  ],
  "metadata": {
@@ -61,6 +287,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
