внесены_небольшие_правки

--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -126,7 +126,9 @@
     "        LoyaltyPoint = loyaltyPoint;\n",
     "    }\n",
     "\n",
-    "    public override void ViewProfile()\n",
+    "    public override void ViewProfile()  // РЕАЛИЗАЦИЯ ПОЛИМОРФИЗМА (В ЧАСТНОСТИ ПЕРЕКРЫТИЯ/ПЕРЕОПРЕДЕЛЕНИЯ):,\n",
+    "                                        // КЛАСС ViewProfile задан в классе Customer,\n",
+    "                                        // а здесь он переопределяется с помощью override\"\n",
     "    {\n",
     "        base.ViewProfile();\n",
     "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
@@ -148,7 +150,7 @@
     "        RegistrationDate = registrationDate;\n",
     "    }\n",
     "\n",
-    "    public override void UpdateEmail(string newEmail)\n",
+    "    public override void UpdateEmail(string newEmail) // Возможно благодаря полиморфизму\n",
     "    {\n",
     "        Email = newEmail;\n",
     "        RegistrationDate = DateTime.Today.ToString();\n",
