еще_правки_комментариев

--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -127,7 +127,7 @@
     "    }\n",
     "\n",
     "    public override void ViewProfile()  // РЕАЛИЗАЦИЯ ПОЛИМОРФИЗМА (В ЧАСТНОСТИ ПЕРЕКРЫТИЯ/ПЕРЕОПРЕДЕЛЕНИЯ):,\n",
-    "                                        // КЛАСС ViewProfile задан в классе Customer,\n",
+    "                                        // Метод ViewProfile задан в классе Customer,\n",
     "                                        // а здесь он переопределяется с помощью override\"\n",
     "    {\n",
     "        base.ViewProfile();\n",
@@ -179,7 +179,7 @@
     "        Console.WriteLine(GroupName);\n",
     "    }\n",
     "\n",
-    "    public virtual void IPO(bool is_public_company)\n",
+    "    public virtual void IPO(bool is_public_company) // перегрузка\n",
     "    {\n",
     "        if (is_public_company)\n",
     "        {\n",
@@ -208,7 +208,7 @@
     "{\n",
     "    int Discount { get; set; }\n",
     "    void CheckDiscount();\n",
-    "    void IPO(int issue);\n",
+    "    void IPO(int issue); // перегрузка\n",
     "}\n",
     "\n",
     "public class PartnerCompanyCustomer : GroupCustomer, IPartnerCompanyCustomer\n",
