--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -62,18 +62,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID клиента: 1; имя: BlackRock; электронная почта: blckrck@gmail.com\n",
-      "ID клиента: 2; имя: Oleg; электронная почта: tnk@gmail.com\n",
-      "баланс лояльности: 25\n",
-      "\n",
-      "*Удалили экземляпр класса VipCustomer admin*\n",
-      "ID клиента: 1; имя: BlackRock; электронная почта: blckrck@gmail.com\n"
+      "ID: 3, имена покупателей: Вадим и Олег, электронные почта для связи: vv@mail.ru или oo@mail.ru, мобильные телефоны: 919-656 и 356-656\r\n"
      ]
     }
    ],
    "source": [
     "public class Customer \n",
     "{\n",
+    "    private static int _nextId = 1;\n",
     "    public int CustomerId { get; set; }\n",
     "    public string Name { get; set; }\n",
     "    public string Email { get; set; }\n",
@@ -82,7 +78,7 @@
     "\n",
     "    public Customer (int customerId, string name, string email, string phone) \n",
     "    {\n",
-    "        CustomerId = customerId;\n",
+    "        CustomerId = _nextId++;\n",
     "        Name = name;\n",
     "        Email = email;\n",
     "        Phone = phone;\n",
@@ -108,6 +104,18 @@
     "    {\n",
     "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}\");\n",
     "    }\n",
+    "\n",
+    "    public static Customer operator +(Customer c1, Customer c2)\n",
+    "    {\n",
+    "        // Сложение двух Customer'ов\n",
+    "        return new Customer(c1.CustomerId + c2.CustomerId, c1.Name + \" и \" + c2.Name, c1.Email + \" или \" + c2.Email,\n",
+    "         c1.Phone + \" и \" + c2.Phone);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayGenericCustomer()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID: {CustomerId}, имена покупателей: {Name}, электронные почта для связи: {Email}, мобильные телефоны: {Phone}\");\n",
+    "    } \n",
     "}\n",
     "\n",
     "public interface IVipCustomer\n",
@@ -270,24 +278,14 @@
     "\n",
     "\n",
     "\n",
-    "CustomerCollection<Customer> customers = new CustomerCollection<Customer>();\n",
-    "\n",
-    "PartnerCompanyCustomer blackRock = new PartnerCompanyCustomer(1, \"BlackRock\", \"blckrck@gmail.com\", \"89997773344\", \"BlackRockInvestment\", 20);\n",
-    "VipCustomer admin = new VipCustomer(2, \"Oleg\", \"tnk@gmail.com\", \"89991234455\", 25);\n",
-    "\n",
-    "// blackRock.IPO(2500);\n",
-    "// blackRock.IPO(false);\n",
-    "\n",
-    "customers.Add(blackRock);\n",
-    "customers.Add(admin);\n",
-    "customers.ViewProfile(); \n",
-    "\n",
-    "customers.Remove(admin);\n",
-    "Console.WriteLine();\n",
-    "Console.WriteLine(\"*Удалили экземляпр класса VipCustomer admin*\");\n",
     "\n",
     "\n",
-    "customers.ViewProfile(); // из списка пропал объект admin"
+    "VipCustomer cus1 = new VipCustomer(1, \"Вадим\", \"vv@mail.ru\", \"919-656\", 25);\n",
+    "Customer cus2 = new Customer(2, \"Олег\", \"oo@mail.ru\", \"356-656\");\n",
+    "\n",
+    "\n",
+    "Customer cus3 = cus1 + cus2;\n",
+    "cus3.DisplayGenericCustomer();\n"
    ]
   }
  ],
