--- a/Sprint5/Task1.ipynb
+++ b/Sprint5/Task1.ipynb
@@ -1,8 +1,153 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:DodgerBlue\">HashSet<T></h1>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`HashSet<T>` в C# — это коллекция, которая хранит уникальные элементы без определенного порядка. Она полезна, когда нужно быстро проверять наличие элемента или добавлять только уникальные элементы. Давайте рассмотрим, как с ней работать на примере классов `Transport`, `Car`, и `Bike`.\n",
+    "\n",
+    "### Создание классов Transport, Car, и Bike\n",
+    "\n",
+    "Сначала определим базовый класс `Transport` и его наследники `Car` и `Bike`:\n",
+    "\n",
+    "```csharp\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        // Простая проверка равенства базируется на модели и производителе\n",
+    "        if (obj is Transport transport)\n",
+    "        {\n",
+    "            return Model == transport.Model && Manufacturer == transport.Manufacturer;\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        // Создание хеш-кода на основе модели и производителя\n",
+    "        return HashCode.Combine(Model, Manufacturer);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Работа с HashSet<T>\n",
+    "\n",
+    "Теперь рассмотрим, как использовать `HashSet<T>` для хранения объектов `Transport`.\n",
+    "\n",
+    "```csharp\n",
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "\n",
+    "// Создаем HashSet для уникальных объектов транспортных средств\n",
+    "HashSet<Transport> transportSet = new HashSet<Transport>();\n",
+    "\n",
+    "// Добавляем объекты Car и Bike в HashSet\n",
+    "var car1 = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "var car2 = new Car(\"Model 3\", \"Tesla\", 4);\n",
+    " var bike1 = new Bike(\"Mountain Explorer\", \"Giant\", true);\n",
+    "\n",
+    "transportSet.Add(car1);\n",
+    "transportSet.Add(car2);\n",
+    "transportSet.Add(bike1);\n",
+    "\n",
+    "// Попробуем добавить повторяющийся объект\n",
+    "var duplicateCar = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "bool isAdded = transportSet.Add(duplicateCar);\n",
+    "\n",
+    "Console.WriteLine($\"Was duplicate car added? {isAdded}\"); // false\n",
+    "\n",
+    "// Перебираем и выводим информацию обо всех уникальных транспортных средствах\n",
+    "foreach (var transport in transportSet)\n",
+    "{\n",
+    "    transport.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### Объяснения и комментарии:\n",
+    "\n",
+    "- **Уникальность объектов**: `HashSet<T>` не допускает дублирования. Если вы пытаетесь добавить элемент, который уже присутствует (определяется методом `Equals` и `GetHashCode`), он не добавляется.\n",
+    "\n",
+    "- **Методы `Equals` и `GetHashCode`**: Эти методы переопределены для корректной работы с `HashSet`. `Equals` определяет, когда два объекта считаются равными, а `GetHashCode` возвращает хеш-код, используемый для быстрого поиска элемента.\n",
+    "\n",
+    "- **Быстрая проверка на наличие**: Благодаря хешированию, `HashSet` позволяет быстро проверять, существует ли элемент в коллекции (`O(1)` — амортизированное время).\n",
+    "\n",
+    "- **Отсутствие порядка**: Элементы в `HashSet` не имеют определенного порядка, в отличие от `List<T>`.\n",
+    "\n",
+    "`HashSet<T>` идеально подходит для сценариев, где требуется исключительно уникальность элементов и быстрое выполнение операций поиска. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color:DodgerBlue\">Для проверки напишите пример кода на основе классов `Transport`, `Car`, и `Bike` ниже в блоке с применением  HashSet</h4>\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -11,8 +156,266 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Was duplicate car added? False\n",
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "\n",
+      "Model: Model 3, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "\n",
+      "Model: Mountain Explorer, Manufacturer: Giant\n",
+      "Has Carrier: True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        // Простая проверка равенства базируется на модели и производителе\n",
+    "        if (obj is Transport transport)\n",
+    "        {\n",
+    "            return Model == transport.Model && Manufacturer == transport.Manufacturer;\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        // Создание хеш-кода на основе модели и производителя\n",
+    "        return HashCode.Combine(Model, Manufacturer);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Создаем HashSet для уникальных объектов транспортных средств\n",
+    "HashSet<Transport> transportSet = new HashSet<Transport>();\n",
+    "\n",
+    "// Добавляем объекты Car и Bike в HashSet\n",
+    "var car1 = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "var car2 = new Car(\"Model 3\", \"Tesla\", 4);\n",
+    " var bike1 = new Bike(\"Mountain Explorer\", \"Giant\", true);\n",
+    "\n",
+    "transportSet.Add(car1);\n",
+    "transportSet.Add(car2);\n",
+    "transportSet.Add(bike1);\n",
+    "\n",
+    "// Попробуем добавить повторяющийся объект\n",
+    "var duplicateCar = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "bool isAdded = transportSet.Add(duplicateCar);\n",
+    "\n",
+    "Console.WriteLine(car1.Equals(car2));\n",
+    "Console.WriteLine($\"Was duplicate car added? {isAdded}\"); // false\n",
+    "\n",
+    "// Перебираем и выводим информацию обо всех уникальных транспортных средствах\n",
+    "foreach (var transport in transportSet)\n",
+    "{\n",
+    "    transport.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color:Red\">Задание:</h4>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "Ниже в блоке по примеру создайте базовый класс Animal и производные классы (3-4 например Dog, Cat, Bird и так далее) реализуйте при помощи  HashSet. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1603550263\n",
+      "Was platypus2 added? True\n",
+      "Класс: Птица, Имя: Чижик\n",
+      "Цвет оперения: Красный\n",
+      "\n",
+      "Класс: Птица, Имя: Пыжик\n",
+      "Цвет оперения: Синий\n",
+      "\n",
+      "Класс: Утконос, Имя: Перри\n",
+      "Это животное шпион!\n",
+      "\n",
+      "Класс: Утконос, Имя: Керри\n",
+      "Это животное точно не шпион\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Classification { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Animal(string classification, string name)\n",
+    "    {\n",
+    "        Classification = classification;\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        // Простая проверка равенства базируется на модели и производителе\n",
+    "        if (obj is Animal animal)\n",
+    "        {\n",
+    "            return Classification == animal.Classification && Name == animal.Name;\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        // Создание хеш-кода на основе модели и производителя\n",
+    "        return HashCode.Combine(Classification, Name);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Класс: {Classification}, Имя: {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Bird(string color, string classification, string name)\n",
+    "        : base(classification, name)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет оперения: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Platypus : Animal\n",
+    "{\n",
+    "    public bool IsSpy { get; set; }\n",
+    "\n",
+    "    public Platypus(bool isSpy, string classification, string name)\n",
+    "        : base(classification, name)\n",
+    "    {\n",
+    "        IsSpy = isSpy;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        if (IsSpy)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Это животное шпион!\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Это животное точно не шпион\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Создаем HashSet для уникальных объектов животных\n",
+    "HashSet<Animal> animalSet = new HashSet<Animal>();\n",
+    "\n",
+    "// Добавляем объекты Bird и Platypus в HashSet\n",
+    "var bird1 = new Bird(\"Красный\", \"Птица\", \"Чижик\");\n",
+    "var bird2 = new Bird(\"Синий\", \"Птица\", \"Пыжик\");\n",
+    "var platypus1 = new Platypus(true, \"Утконос\", \"Перри\");\n",
+    "\n",
+    "animalSet.Add(bird1);\n",
+    "animalSet.Add(bird2);\n",
+    "animalSet.Add(platypus1);\n",
+    "\n",
+    "Console.WriteLine(platypus1.GetHashCode());\n",
+    "\n",
+    "// Попробуем добавить повторяющийся объект\n",
+    "var platypus2 = new Platypus(false, \"Утконос\", \"Керри\"); // другое животное\n",
+    "bool isAdded = animalSet.Add(platypus2);\n",
+    "\n",
+    "Console.WriteLine($\"Was platypus2 added? {isAdded}\"); // false\n",
+    "\n",
+    "// Перебираем и выводим информацию обо всех уникальных животных\n",
+    "foreach (var animal in animalSet)\n",
+    "{\n",
+    "    animal.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -20,6 +423,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
