--- a/Sprint5/Task2.ipynb
+++ b/Sprint5/Task2.ipynb
@@ -1,8 +1,200 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:DodgerBlue\">Делегаты, лямбда-выражения и события<T></h1>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Делегаты, лямбда-выражения и события являются важными концепциями в C#, которые позволяют работать с методами как с объектами, писать краткий код и управлять реакциями на события. Рассмотрим их на примере гипотетических классов `Transport`, `Car`, и `Bike`.\n",
+    "\n",
+    "### Делегаты\n",
+    "\n",
+    "**Делегат** — это тип безопасного указателя на метод, похожий на функцию в C или C++. Делегаты в C# используются для передачи методов как параметров, а также для создания обратных вызовов.\n",
+    "\n",
+    "**Пример:**\n",
+    "\n",
+    "Создадим делегат, который может ссылаться на методы, выводящие информацию о транспортном средстве:\n",
+    "\n",
+    "```csharp\n",
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Используем делегат:\n",
+    "\n",
+    "```csharp\n",
+    "\n",
+    "        Car car = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "        Bike bike = new Bike(\"Speedster\", \"Giant\", true);\n",
+    "\n",
+    "        // Присваиваем делегату метод DisplayInfo\n",
+    "        DisplayDelegate displayCar = car.DisplayInfo;\n",
+    "        DisplayDelegate displayBike = bike.DisplayInfo;\n",
+    "\n",
+    "        // Вызов методов через делегаты\n",
+    "        displayCar();\n",
+    "        displayBike();\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Лямбда-выражения\n",
+    "\n",
+    "**Лямбда-выражения** позволяют вам писать анонимные методы в более краткой форме. Это часто используется в LINQ и асинхронном программировании.\n",
+    "\n",
+    "**Пример:**\n",
+    "\n",
+    "```csharp\n",
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    "\n",
+    "\n",
+    " \n",
+    "List<Transport> transports = new List<Transport>\n",
+    "{\n",
+    "    new Car(\"Model S\", \"Tesla\", 4),\n",
+    "    new Bike(\"Speedster\", \"Giant\", true),\n",
+    "    new Car(\"Model 3\", \"Tesla\", 4),\n",
+    "};\n",
+    "\n",
+    "// Используем лямбда-выражение для фильтрации транспортных средств\n",
+    "var teslaCars = transports.OfType<Car>().Where(c => c.Manufacturer == \"Tesla\");\n",
+    "\n",
+    "foreach (var car in teslaCars)\n",
+    "{\n",
+    "    car.DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### События\n",
+    "\n",
+    "**События** используются для оповещения подписчиков о случившихся действиях, предоставляя более высокоуровневый способ взаимодействия между различными частями кода.\n",
+    "\n",
+    "**Пример:**\n",
+    "\n",
+    "```csharp\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public delegate void TransportHandler(string message);\n",
+    "    public event TransportHandler TransportUpdated;\n",
+    "\n",
+    "    public void UpdateModel(string newModel)\n",
+    "    {\n",
+    "        Model = newModel;\n",
+    "        // Вызываем событие после обновления модели\n",
+    "        TransportUpdated?.Invoke($\"Model updated to {newModel}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "Transport transport = new Transport { Model = \"Old Model\", Manufacturer = \"Generic\" };\n",
+    "// Подписываем метод на событие\n",
+    "transport.TransportUpdated += OnTransportUpdated;\n",
+    "// Обновляем модель; это вызовет событие\n",
+    "transport.UpdateModel(\"New Model\");\n",
+    "\n",
+    "\n",
+    "static void OnTransportUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Объяснения и комментарии:\n",
+    "\n",
+    "- **Делегаты**: Тип данных, который можно использовать для хранения ссылок на методы. Полезно для обратных вызовов и передачи методов.\n",
+    "\n",
+    "- **Лямбда-выражения**: Более краткая запись анонимных методов, часто используется в LINQ для фильтрации, проекций и агрегаций.\n",
+    "\n",
+    "- **События**: Механизм уведомления объектов об изменениях состояния или других действиях. Позволяют подписываться на события в одной части программы и реакцию на них в другой.\n",
+    "\n",
+    "Эти механизмы делают программу гибкой и более структурированной, обеспечивая четкое отделение логики и упрощая повторное использование кода. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color:DodgerBlue\">Для проверки напишите пример кода на основе классов `Transport`, `Car`, и `Bike` ниже в блоке с применением  делегатов, лямда-выражений и событий</h4>\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -11,8 +203,180 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model updated to New Model\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public delegate void TransportHandler(string message);\n",
+    "    public event TransportHandler TransportUpdated;\n",
+    "\n",
+    "    public void UpdateModel(string newModel)\n",
+    "    {\n",
+    "        Model = newModel;\n",
+    "        // Вызываем событие после обновления модели\n",
+    "        TransportUpdated?.Invoke($\"Model updated to {newModel}\"); // С помощью Invoke будут вызваны все методы-обработчики,\n",
+    "        // подписанные на событие TransportUpdated, и им передастся строка.\n",
+    "        // Оператор ?. гарантирует, что событие вызывается только если на него есть подписчики.\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Transport transport = new Transport { Model = \"Old Model\", Manufacturer = \"Generic\" };\n",
+    "\n",
+    "// Подписываем метод на событие\n",
+    "transport.TransportUpdated += OnTransportUpdated;\n",
+    "transport.TransportUpdated += InTransportUpdated;\n",
+    "// Метод OnTransportUpdated подписывается на событие TransportUpdated. \n",
+    "// Это означает, что при вызове события будет автоматически вызван метод OnTransportUpdated\n",
+    "\n",
+    "// Обновляем модель; это вызовет событие\n",
+    "transport.UpdateModel(\"New Model\");\n",
+    "\n",
+    "static void OnTransportUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}\n",
+    "\n",
+    "static void InTransportUpdated()\n",
+    "{\n",
+    "    Console.WriteLine(\"123\");\n",
+    "}\n",
+    "// Ключевые особенности событий\n",
+    "// Основаны на делегатах: События определяются через делегаты.\n",
+    "// Инкапсуляция: Событие может быть вызвано только внутри класса, в котором оно определено (в отличие от делегатов, которые могут вызываться где угодно).\n",
+    "// Подписчики: Вы можете подписывать методы на событие, которые будут вызваны автоматически при наступлении события.\n",
+    "// Используются для обратной связи: Например, для уведомления об изменении данных, завершении операции, обработке нажатий кнопок и т. д."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color:Red\">Задание:</h4>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "Ниже в блоке по примеру создайте базовый класс Animal и производные классы (3-4 например Dog, Cat, Bird и так далее) с применением  делегатов, лямда-выражений и событий."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buddy barked loudly!\n",
+      "Buddy is wagging its tail.\n",
+      "Whiskers meowed softly.\n",
+      "Whiskers is purring.\n",
+      "Peryy made a sound.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    // Делегат для события\n",
+    "    public delegate void AnimalActionHandler(string message);\n",
+    "\n",
+    "    // Событие, которое уведомляет об активности животного\n",
+    "    public event AnimalActionHandler OnAction;\n",
+    "\n",
+    "    // Метод для вызова события\n",
+    "    protected void Notify(string action)\n",
+    "    {\n",
+    "        OnAction?.Invoke($\"{Name} {action}\");\n",
+    "    }\n",
+    "\n",
+    "    // Виртуальный метод активности животного\n",
+    "    public virtual void MakeSound()\n",
+    "    {\n",
+    "        Notify(\"made a sound.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public Dog(string name) : base(name) { }\n",
+    "\n",
+    "    // Переопределение метода\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Notify(\"barked loudly!\");\n",
+    "    }\n",
+    "\n",
+    "    // Дополнительное действие\n",
+    "    public void WagTail()\n",
+    "    {\n",
+    "        Notify(\"is wagging its tail.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public Cat(string name) : base(name) {} \n",
+    "\n",
+    "    // Переопределение метода\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Notify(\"meowed softly.\");\n",
+    "    }\n",
+    "\n",
+    "    // Дополнительное действие\n",
+    "    public void Purr()\n",
+    "    {\n",
+    "        Notify(\"is purring.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Создаем животных\n",
+    "Dog dog = new Dog(\"Buddy\");\n",
+    "Cat cat = new Cat(\"Whiskers\");\n",
+    "Animal animal = new Animal(\"Peryy\");\n",
+    "\n",
+    "// Подписываемся на события с помощью лямбда-выражений\n",
+    "dog.OnAction += message => Console.WriteLine($\"{message}\");\n",
+    "cat.OnAction += message => Console.WriteLine($\"{message}\");\n",
+    "animal.OnAction += message => Console.WriteLine($\"{message}\");\n",
+    "\n",
+    "// Вызываем методы, которые активируют события\n",
+    "dog.MakeSound();       // Buddy barked loudly!\n",
+    "dog.WagTail();         // Buddy is wagging its tail.\n",
+    "\n",
+    "cat.MakeSound();       // Whiskers meowed softly.\n",
+    "cat.Purr();            // Whiskers is purring.\n",
+    "\n",
+    "animal.MakeSound();    // Peryy made a sound.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -20,6 +384,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
