Добавлены делегаты, события, лямбда-выражения

--- a/Sprint5/Task3.ipynb
+++ b/Sprint5/Task3.ipynb
@@ -1,10 +1,376 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:DodgerBlue\">Индивидуальный проект</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Название проекта: класс Customer в C#</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "### Вариант задания 11\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Описание проекта:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "Создать базовый класс Customer в C#, который будет представлять информацию о\n",
+    "клиентах или покупателях. На основе этого класса разработать 2-3 производных\n",
+    "класса, демонстрирующих принципы наследования и полиморфизма. В каждом из\n",
+    "классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n",
+    "\n",
+    "#### Дополнительное задание\n",
+    "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) исользуйтие в проекте коллекции, делегаты, события.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Реализация:</h2>\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Найденый клиент:\n",
+      "ID клиента: 1; имя: huang; электронная почта: hh@mail.ru\n",
+      "False\n",
+      "True\n",
+      "ID клиента: 1; имя: BlackRock; электронная почта: blckrck@gmail.com\n",
+      "Почта обновлена на best_company_owner@gmail.com\n",
+      "Почта обновлена на best_owner@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System.Reflection;\n",
+    "\n",
+    "public class Customer \n",
+    "{\n",
+    "    public int CustomerId { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public string Email { get; set; }\n",
+    "    public string Phone { get; set; } \n",
+    "\n",
+    "\n",
+    "    public Customer (int customerId, string name, string email, string phone)\n",
+    "    {\n",
+    "        CustomerId = customerId;\n",
+    "        Name = name;\n",
+    "        Email = email;\n",
+    "        Phone = phone;\n",
+    "    }\n",
+    "\n",
+    "    public delegate void CustomerHandler(string message);\n",
+    "    public event CustomerHandler CustomerUpdated;\n",
+    "\n",
+    "    public virtual void UpdateEmail(string newEmail) \n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "        // Вызываем событие после обновления почты\n",
+    "        CustomerUpdated?.Invoke($\"Почта обновлена на {newEmail}\"); // Invoke - вызывает подписанный метод\n",
+    "    }\n",
+    "\n",
+    "    public void SayHello(Customer myCustomer)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} приветствует {myCustomer.Name}!\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetFullName() \n",
+    "    {\n",
+    "        Console.WriteLine(Name);\n",
+    "    }    \n",
+    "\n",
+    "    public virtual void ViewProfile()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}\");\n",
+    "    }\n",
+    "\n",
+    "    public static Customer operator +(Customer c1, Customer c2)\n",
+    "    {\n",
+    "        // Сложение двух Customer'ов\n",
+    "        return new Customer(c1.CustomerId + c2.CustomerId, c1.Name + \" и \" + c2.Name, c1.Email + \" или \" + c2.Email,\n",
+    "         c1.Phone + \" и \" + c2.Phone);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayGenericCustomer()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID: {CustomerId}, имена покупателей: {Name}, электронные почта для связи: {Email}, мобильные телефоны: {Phone}\");\n",
+    "    } \n",
+    "\n",
+    "    public void ClassInfo()\n",
+    "    {\n",
+    "        Type type = this.GetType();\n",
+    "\n",
+    "        Console.WriteLine($\"Класс: {type.Name}\");\n",
+    "\n",
+    "        MethodInfo[] methods = type.GetMethods(BindingFlags.DeclaredOnly | BindingFlags.Instance | BindingFlags.Public);\n",
+    "\n",
+    "        Console.WriteLine(\"Список методов:\");\n",
+    "\n",
+    "        int methodCount = 0;\n",
+    "        foreach (var method in methods)\n",
+    "        {\n",
+    "            if(!method.IsSpecialName)\n",
+    "            {\n",
+    "                Console.WriteLine($\"{method.Name} \");\n",
+    "                methodCount ++;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        Console.WriteLine($\"Количество реализуемых методов: {methodCount}\\n\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IVipCustomer \n",
+    "{\n",
+    "    int LoyaltyPoint { get; set; } \n",
+    "    void ViewLoyaltyPoint(); // для явной реализации интерфейса  \n",
+    "}\n",
+    "\n",
+    "public class VipCustomer : Customer, IVipCustomer \n",
+    "{\n",
+    "    public int LoyaltyPoint { get; set; }\n",
+    "\n",
+    "    public VipCustomer (int customerId, string name, string email, string phone, int loyaltyPoint) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        LoyaltyPoint = loyaltyPoint;\n",
+    "    }\n",
+    "\n",
+    "    public override void ViewProfile()\n",
+    "    {\n",
+    "        base.ViewProfile();\n",
+    "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
+    "    }\n",
+    "\n",
+    "    void IVipCustomer.ViewLoyaltyPoint() // Доступно только для объектов типа IVipCustomer\n",
+    "    {\n",
+    "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class RegularCustomer : Customer \n",
+    "{\n",
+    "    public string RegistrationDate { get; set; }\n",
+    "\n",
+    "    public RegularCustomer (int customerId, string name, string email, string phone, string registrationDate) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        RegistrationDate = registrationDate;\n",
+    "    }\n",
+    "\n",
+    "    public override void UpdateEmail(string newEmail)\n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "        RegistrationDate = DateTime.Today.ToString();\n",
+    "    }\n",
+    "\n",
+    "    public void MakeGift(RegularCustomer myCustomer)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} дарит подарок для {myCustomer.Name}!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class CompanyCustomer : Customer \n",
+    "{\n",
+    "    private readonly VipCustomer _owner; \n",
+    "    public string GroupName { get; set; }\n",
+    "    \n",
+    "    public CompanyCustomer (int customerId, string name, string email, string phone, string groupName, VipCustomer owner) \n",
+    "    : base(customerId, name, email, phone)\n",
+    "    {\n",
+    "        GroupName = groupName;\n",
+    "        _owner = owner; // Создание зависимости через констурктор \n",
+    "    }\n",
+    "    \n",
+    "    public override void GetFullName()\n",
+    "    {\n",
+    "        Console.WriteLine(GroupName);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void IPO(bool is_public_company)\n",
+    "    {\n",
+    "        if (is_public_company)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Данная компания является публичной!\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Данная компания является частной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void CheckOwner() // Использование зависимости\n",
+    "    {\n",
+    "        if (_owner != null)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Компанией {GroupName} владеет {_owner.Name}.\"); \n",
+    "            _owner.ViewProfile();\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Владелец компании {GroupName} не определен.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IPartnerCompanyCustomer \n",
+    "{\n",
+    "    int Discount { get; set; }\n",
+    "    void CheckDiscount();\n",
+    "    void IPO(int issue);\n",
+    "}\n",
+    "\n",
+    "public class PartnerCompanyCustomer : CompanyCustomer, IPartnerCompanyCustomer \n",
+    "{\n",
+    "    public int Discount { get; set; }\n",
+    "\n",
+    "    public PartnerCompanyCustomer (int customerId, string name, string email, string phone, string groupName, VipCustomer owner, int discount) \n",
+    "    : base(customerId, name, email, phone, groupName, owner)\n",
+    "    {\n",
+    "        Discount = discount;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckDiscount()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Скидка компании: {Discount}\");\n",
+    "    }\n",
+    "\n",
+    "    public void IPO(int issue) // Метод от интерфейса IPartnerCompanyCustomer\n",
+    "    {\n",
+    "        Console.WriteLine($\"Эмиссия акций составляет {issue} шт.\");\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    public override void IPO(bool is_public_company) // Метод от класса GroupCustomer\n",
+    "    {\n",
+    "        if (is_public_company)\n",
+    "        {\n",
+    "            Console.WriteLine($\"Акции {GroupName} уже котируются на бирже!\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} не выпускала акций!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "public class CustomerCollection<T> where T : Customer // Generic-класс\n",
+    "{\n",
+    "    private List<T> _customers = new List<T>();\n",
+    "\n",
+    "    public void Add(T customer)\n",
+    "    {\n",
+    "        _customers.Add(customer);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T customer)\n",
+    "    {\n",
+    "        _customers.Remove(customer);\n",
+    "    }\n",
+    "\n",
+    "    public void ViewProfile()\n",
+    "    {\n",
+    "        foreach (var customer in _customers)\n",
+    "        {\n",
+    "            customer.ViewProfile(); \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "VipCustomer oleg = new VipCustomer(2, \"Oleg\", \"tnk@gmail.com\", \"89991234455\", 25);\n",
+    "PartnerCompanyCustomer blackRock = new PartnerCompanyCustomer(1, \"BlackRock\", \"blckrck@gmail.com\", \"89997773344\", \"BlackRockInvestment\", oleg, 20);\n",
+    "CompanyCustomer intel = new CompanyCustomer(1, \"huang\", \"hh@mail.ru\", \"543-867\", \"IntelCorp\", oleg);\n",
+    "\n",
+    "\n",
+    "// Исопльзование коллекции\n",
+    "Dictionary<string, Customer> customerDictionary = new Dictionary<string, Customer>();\n",
+    "\n",
+    "customerDictionary.Add(\"oleg\", oleg);\n",
+    "customerDictionary.Add(\"intel\", intel);\n",
+    "\n",
+    "\n",
+    "if (customerDictionary.TryGetValue(\"intel\", out Customer foundCustomer)) // второе - переменная, куда будет сохранено найденное значение\n",
+    "{\n",
+    "    Console.WriteLine(\"Найденый клиент:\");\n",
+    "    foundCustomer.ViewProfile(); \n",
+    "}\n",
+    "else\n",
+    "{\n",
+    "    Console.WriteLine(\"Клиент не найден\");\n",
+    "}\n",
+    "\n",
+    "\n",
+    "HashSet<Customer> customerSet = new HashSet<Customer>();\n",
+    "\n",
+    "customerSet.Add(oleg);\n",
+    "customerSet.Add(blackRock);\n",
+    "customerSet.Add(intel);\n",
+    "\n",
+    "Console.WriteLine(customerSet.Add(blackRock)); // Вернет false, т.к. blackRock уже существует\n",
+    "\n",
+    "Console.WriteLine(customerSet.Contains(blackRock)); // true\n",
+    "\n",
+    "\n",
+    "// Использование делегата\n",
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "DisplayDelegate displayBlackRock = blackRock.ViewProfile;\n",
+    "\n",
+    "displayBlackRock();\n",
+    "\n",
+    "\n",
+    "// События\n",
+    "// Подписываемся на события с помощью лямбда-выражений\n",
+    "oleg.CustomerUpdated += newEmail => Console.WriteLine($\"{newEmail}\");\n",
+    "\n",
+    "oleg.UpdateEmail(\"best_company_owner@gmail.com\");\n",
+    "oleg.UpdateEmail(\"best_owner@gmail.com\");"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
